--- a/src/styles/utilities.css
+++ b/src/styles/utilities.css
@@ -23,10 +23,10 @@
   display: flex;
   flex-direction: column;
   gap: var(--stack-gap, var(--space-4));
+}
 
-  > * + * {
-    margin-top: 0;
-  }
+.stack > * + * {
+  margin-top: 0;
 }
 
 .cluster {
